Change PR paths for Lint job

--- a/.github/workflows/klint.yml
+++ b/.github/workflows/klint.yml
@@ -3,8 +3,7 @@ name: ktlint
 on:
   pull_request:
     paths:
-      - "**/*.kt"
-      - ".github/workflows/ktlint.yml"
+      - master
   push:
     branches:
       - !master
