Fix push branch

--- a/.github/workflows/klint.yml
+++ b/.github/workflows/klint.yml
@@ -7,8 +7,8 @@ on:
       - ".github/workflows/ktlint.yml"
   push:
     branches:
-      - !master
-
+      - "**/*.kt"
+      - ".github/workflows/ktlint.yml"
 jobs:
   ktlint:
     runs-on: ubuntu-latest
