--- a/katmaps-library/build.gradle
+++ b/katmaps-library/build.gradle
@@ -35,4 +35,11 @@ dependencies {
 
   // Google Maps
   implementation "com.google.android.gms:play-services-maps:17.0.0"
+
+  // Required -- JUnit 4 framework
+  testImplementation 'junit:junit:4.12'
+  // Optional -- Robolectric environment
+  testImplementation 'androidx.test:core:1.2.0'
+  // Optional -- Mockito framework
+  testImplementation 'org.mockito:mockito-core:2.23.0'
 }
