--- a/.github/workflows/verify_pr.yml
+++ b/.github/workflows/verify_pr.yml
@@ -7,6 +7,30 @@ on:
       - ".github/workflows/verify_pr.yml"
 
 jobs:
+  ktlint:
+    name: Verify ktlint
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: "checkout"
+        uses: actions/checkout@v2
+
+      - name: "ktlint"
+        uses: "vroy/gha-kotlin-linter@v1"
+  build_artifacts:
+    name: Verify Build
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v1
+      - name: Set up JDK 1.8
+        uses: actions/setup-java@v1
+        with:
+          java-version: 1.8
+          architecture: x64
+      - name: Build with Gradle
+        run: ./gradlew clean :katmaps-library:build
+
   test:
     name: Verify Unit Tests
     runs-on: ubuntu-latest
@@ -19,14 +43,3 @@ jobs:
           java-version: 1.8
       - name: Unit tests
         run: bash ./gradlew test --stacktrace
-
-  ktlint:
-    name: Verify ktlint
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: "checkout"
-        uses: actions/checkout@v2
-
-      - name: "ktlint"
-        uses: "vroy/gha-kotlin-linter@v1"
